# Remodify-Microservices

./: .gitignore  README.md  docker-compose.yml
remodify-apigateway/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
remodify-apigateway/configs/: url_publics.py  url_services.py
remodify-apigateway/models/: Business.py  Contractors.py  Profiles.py  Project.py  ProjectRequest.py  Remodelers.py  Reviews.py  Users.py
remodify-apigateway/services/: profiles_services.py  remodelers_services.py  users_services.py
remodify-apigateway/services/Business/: business_service.py
remodify-apigateway/services/IAM/: Contractors_services.py  IAM_service.py  contractors_services.py  profiles_services.py  remodelers_services.py  users_services.py
remodify-apigateway/services/IAM/models/: SignInRequest.py  SignUpRequest.py
remodify-apigateway/services/Project/: project_service.py
remodify-apigateway/services/ProjectRequest/: projectrequest_service.py
remodify-apigateway/services/Reviews/: reviews_service.py
remodify-business/: Dockerfile  pom.xml
remodify-business/src/main/resources/: application.properties
remodify-iam/: Dockerfile  pom.xml
remodify-iam/src/main/resources/: application.properties
remodify-project/: Dockerfile  pom.xml
remodify-project/src/main/resources/: application.properties
remodify-projectrequest/: Dockerfile  pom.xml
remodify-projectrequest/src/main/resources/: application.properties
remodify-reviews/: Dockerfile  pom.xml
remodify-reviews/src/main/resources/: application.properties
(+180 files in other folders)
